// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentPreview/PreviewNavigation render() should render correctly with a filled collection 1`] = `
<Fragment>
  <PlainButton
    className="bcpr-navigate-right"
    onClick={[Function]}
    type="button"
  >
    <IconNavigateRight />
  </PlainButton>
</Fragment>
`;

exports[`components/ContentPreview/PreviewNavigation render() should render correctly with a filled collection 2`] = `
<Fragment>
  <PlainButton
    className="bcpr-navigate-left"
    onClick={[Function]}
    type="button"
  >
    <IconNavigateLeft />
  </PlainButton>
  <PlainButton
    className="bcpr-navigate-right"
    onClick={[Function]}
    type="button"
  >
    <IconNavigateRight />
  </PlainButton>
</Fragment>
`;

exports[`components/ContentPreview/PreviewNavigation render() should render correctly with a filled collection 3`] = `
<Fragment>
  <PlainButton
    className="bcpr-navigate-left"
    onClick={[Function]}
    type="button"
  >
    <IconNavigateLeft />
  </PlainButton>
</Fragment>
`;

exports[`components/ContentPreview/PreviewNavigation render() should render correctly with an empty collection 1`] = `""`;
